--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,1 @@
-body{background-color:#7878d2;-webkit-box-shadow:0 0 1px #000;box-shadow:0 0 1px #000;-webkit-transform:translateX(20px);transform:translateX(20px)}h1{font-size:60px;color:#fff;background-color:#7e8000}
+*{margin:0;padding:0;-webkit-box-sizing:border-box;box-sizing:border-box;text-decoration:none;list-style:none}body{background-color:#e1e1e1}
