--- a/scss/_patterns.scss
+++ b/scss/_patterns.scss
@@ -1,8 +1,7 @@
 .btn {
-  width: 115.69px;
-  height: 41px;
+  padding: 10px 25.2308px;
   border-radius: 4px;
-  display: flex;
+  display: inline-flex;
   gap: 8px;
   justify-content: center;
   align-items: center;
@@ -11,14 +10,18 @@
   line-height: 21px;
   font-weight: 500;
   transition: all 0.4s;
+
   &.btn-primary {
     background-color: $primary-default;
+
     &:hover {
       background-color: $primary-light;
     }
   }
+
   &.btn-outline {
     border: 1px solid #ffffff;
+
     &:hover {
       background-color: $white;
       color: $neutral-200;
@@ -42,29 +45,35 @@
     position: relative;
     border-radius: 6px;
     overflow: hidden;
+
     .logo-card {
       position: absolute;
       bottom: 35px;
       z-index: 1;
     }
+
     .image-card {
       transition: transform 0.4s;
     }
   }
+
   h3 {
     font-size: 19.35px;
     line-height: 29px;
     font-weight: 600;
   }
+
   p {
     font-size: 15.05px;
     line-height: 23px;
     font-weight: 400;
     opacity: 0.8;
   }
+
   &:hover .image-card {
     transform: scale(1.1);
   }
+
   &:hover .image {
     background: linear-gradient(182.71deg, #020203 2.26%, rgba(2, 2, 3, 0) 73.74%);
     // opacity: 0.8;
