--- a/scss/_patterns.scss
+++ b/scss/_patterns.scss
@@ -32,13 +32,27 @@
 
 .game-card {
   max-width: 301px;
-  height: 494.9px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 24px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-
+  &.all-games {
+    border: 1.6125px solid #212428;
+    border-radius: 4.3px;
+    align-items: center;
+    justify-content: center;
+    height: 366.55px;
+    span {
+      font-weight: 600;
+      font-size: 17.2px;
+      line-height: 26px;
+      img {
+        margin-right: 14px;
+      }
+    }
+  }
   .image {
     display: flex;
     justify-content: center;
