--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -240,7 +240,90 @@
                 gap: 32px 48px;
                 &.active {
                     display: grid;
+                    animation: fade 0.8s forwards;
                 }
+                @keyframes fade {
+                    from {
+                        opacity: 0;
+                        transform: translateY(40px);
+                    }
+                    to {
+                        opacity: 1;
+                        transform: translateY(0px);
+                    }
+                }
+            }
+        }
+    }
+}
+
+.s-download {
+    background-image: url(../assets/bg-download.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 852px;
+    position: relative;
+    overflow: hidden;
+    .overlay {
+        background: radial-gradient(61.91% 61.91% at 58.62% 25.94%, #030303 0%, rgba(196, 196, 196, 0) 100%);
+        mix-blend-mode: normal;
+    }
+    .container {
+        display: flex;
+
+        .left-area {
+            padding-top: 132px;
+            max-width: 312px;
+            .logo {
+                margin-bottom: 30px;
+            }
+            h2 {
+                font-weight: 700;
+                font-size: 32px;
+                line-height: 110.2%;
+                margin-bottom: 30px;
+            }
+            ul {
+                margin-bottom: 42px;
+                li {
+                    display: flex;
+                    gap: 16px;
+                    &:not(:last-child) {
+                        margin-bottom: 24px;
+                    }
+                }
+            }
+            a {
+                margin-bottom: 49px;
+                align-items: flex-end;
+            }
+            .aplicativo-mobile {
+                display: flex;
+                gap: 18px;
+                span {
+                    text-decoration: underline;
+                    cursor: pointer;
+                }
+            }
+        }
+        .right-area {
+            position: absolute;
+            top: 1;
+            left: 463px;
+            width: 1053.33px;
+            height: 593.96px;
+
+            .image1 {
+                position: absolute;
+                top: 99.7px;
+                left: 90px;
+            }
+            .image2 {
+                position: absolute;
+                top: 400.19px;
+                left: 443px;
             }
         }
     }
