--- a/scss/_patterns.scss
+++ b/scss/_patterns.scss
@@ -64,6 +64,7 @@
       position: absolute;
       bottom: 35px;
       z-index: 1;
+      transition: transform 0.4s;
     }
 
     .image-card {
@@ -87,9 +88,12 @@
   &:hover .image-card {
     transform: scale(1.1);
   }
+  &:hover .logo-card {
+    transform: scale(1.3);
+  }
 
-  &:hover .image {
-    background: linear-gradient(182.71deg, #020203 2.26%, rgba(2, 2, 3, 0) 73.74%);
-    // opacity: 0.8;
+  &:hover .image-card {
+    background: linear-gradient(182.12deg, #020203 4.2%, hsla(240, 20%, 1%, 0.389) 73.91%);
+    opacity: 0.9;
   }
 }
