--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import "variables";
 @import "grid";
 @import "reset";
+@import "animations";
 @import "patterns";
 @import "header";
 @import "home";
