--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -148,9 +148,11 @@
                                             width: 50px;
                                             height: 50px;
                                             border-radius: 50%;
-                                            background: linear-gradient(136.72deg,
-                                                    rgba(7, 7, 10, 0.86) 19.22%,
-                                                    rgba(15, 16, 22, 0.5) 76.59%);
+                                            background: linear-gradient(
+                                                136.72deg,
+                                                rgba(7, 7, 10, 0.86) 19.22%,
+                                                rgba(15, 16, 22, 0.5) 76.59%
+                                            );
                                             backdrop-filter: blur(3px);
                                         }
                                     }
@@ -361,14 +363,148 @@
                 position: absolute;
                 top: 99.7px;
                 left: 90px;
-                animation: float 8s ease-in alternate;
+                animation: float 8s ease-in-out infinite;
             }
 
             .image2 {
                 position: absolute;
                 top: 399px;
                 left: 297px;
+                animation: float 6s ease-in-out infinite;
             }
         }
+    }
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    z-index: 5;
+    pointer-events: none;
+    opacity: 0;
+    transform: translateY(30px);
+    transition: all 0.4s;
+    .overlay {
+        background-color: hsla(0, 0%, 0%, 0.5);
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        z-index: 6;
+
+        .box {
+            position: relative;
+            z-index: 7;
+            background-color: $neutral-100;
+            background-image: url(../assets/bg-modal.png);
+            max-width: 696px;
+            width: 100%;
+            height: 600px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border-radius: 4px;
+            padding-top: 61px;
+            padding-bottom: 66px;
+            padding-inline: 135px;
+
+            .logo {
+                margin-bottom: 40px;
+                width: 166.53px;
+            }
+            form {
+                display: flex;
+                flex-direction: column;
+                max-width: 426px;
+                width: 100%;
+
+                input {
+                    height: 48px;
+                    padding-left: 16px;
+                    font-weight: 500;
+                    font-size: 15px;
+                    line-height: 22px;
+                    border-radius: 4px;
+                    border: none;
+                    outline-color: $primary-default;
+                    &:not(:first-child) {
+                        margin-top: 16px;
+                    }
+                    &::placeholder {
+                        opacity: 0.6;
+                    }
+                }
+                button {
+                    margin-top: 24px;
+                    border: none;
+                    font-weight: 600;
+                    font-size: 16px;
+                    line-height: 24px;
+                    height: 52px;
+                }
+            }
+            .others-connect {
+                text-align: center;
+                margin-top: 41px;
+                ul {
+                    margin-top: 16px;
+                    display: flex;
+                    justify-content: center;
+                    gap: 16px;
+                    li {
+                        a {
+                            background: #ffffff;
+                            width: 48px;
+                            height: 48px;
+                            border-radius: 4px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            transition: opacity 0.4s;
+                            &:hover {
+                                opacity: 0.8;
+                            }
+                        }
+                    }
+                }
+            }
+            .user-account {
+                margin-top: 35px;
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 24px;
+                text-align: center;
+                p {
+                    margin-bottom: 16px;
+                }
+                a {
+                    display: inline-block;
+                    color: $primary-default;
+                    text-decoration: underline;
+                    &:hover {
+                        opacity: 0.8;
+                    }
+                }
+            }
+            .close {
+                position: absolute;
+                top: 24px;
+                right: 24px;
+                width: 32px;
+                height: 32px;
+                cursor: pointer;
+                img {
+                    padding: 8px;
+                }
+            }
+        }
+    }
+    &.active {
+        pointer-events: all;
+        opacity: 1;
+        transform: translateY(0px);
     }
 }
