--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,7 @@
 header {
     border-bottom: 1.5px solid hsla(0, 0%, 100%, 0.1);
     position: absolute;
-    z-index: 2;
+    z-index: 4;
     width: 100%;
 
     .container {
@@ -55,6 +55,145 @@ header {
             .buttons {
                 display: flex;
                 gap: 16px;
+            }
+
+            .menu-mobile {
+                align-items: center;
+                display: none;
+            }
+        }
+    }
+
+    @include responsive(1000px) {
+        .container {
+            gap: 10px;
+
+            nav {
+                justify-content: center;
+                gap: 90px;
+
+                .menu-links {
+                    display: none;
+                }
+
+                .menu-mobile {
+                    display: flex;
+                }
+            }
+        }
+    }
+
+    @include responsive(600px) {
+        .container {
+            justify-content: space-between;
+
+            nav {
+                width: auto;
+                justify-content: start;
+
+                .buttons {
+                    display: none;
+                }
+            }
+        }
+    }
+}
+
+.menu-games,
+.menu-sports {
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-80px);
+    transition: all .4s;
+    position: absolute;
+    z-index: 3;
+    background: linear-gradient(180deg, #020203 0%, rgba(14, 17, 23, 0.92) 96.35%, rgba(14, 17, 23, 0.9) 100%);
+    backdrop-filter: blur(12px);
+    width: 100%;
+
+    .area-menu.container {
+        padding-top: 96px;
+
+        .pane-games {
+            padding-top: 38px;
+            padding-bottom: 55px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(176px, 1fr));
+            justify-items: center;
+            gap: 32px 28px;
+
+            li {
+                width: 176px;
+                height: 176px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                a {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    text-align: center;
+                    padding: 30px;
+
+                    span {
+                        display: block;
+                    }
+                }
+            }
+        }
+    }
+
+    footer {
+        background-color: rgba(21, 23, 27, 0.7);
+        height: 70px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        ul {
+            display: flex;
+            gap: 64px;
+
+            a {
+                display: flex;
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 24px;
+
+                img {
+                    margin-right: 10px;
+                }
+            }
+        }
+    }
+
+    &.active {
+        opacity: 1;
+        pointer-events: all;
+        height: auto;
+        transform: translateY(0px);
+    }
+}
+
+.menu-sports {
+    .area-menu.container {
+        .pane-games {
+            li {
+                width: 174px;
+                height: 237px;
+
+                a {
+                    padding: 0;
+                    font-weight: 500;
+                    font-size: 14px;
+                    line-height: 120%;
+
+                    img {
+                        margin-bottom: 23px;
+                    }
+                }
             }
         }
     }
