--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -69,7 +69,7 @@ header {
             gap: 10px;
 
             nav {
-                justify-content: center;
+                justify-content: flex-end;
                 gap: 90px;
 
                 .menu-links {
