--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -147,11 +147,9 @@
                                             width: 50px;
                                             height: 50px;
                                             border-radius: 50%;
-                                            background: linear-gradient(
-                                                136.72deg,
-                                                rgba(7, 7, 10, 0.86) 19.22%,
-                                                rgba(15, 16, 22, 0.5) 76.59%
-                                            );
+                                            background: linear-gradient(136.72deg,
+                                                    rgba(7, 7, 10, 0.86) 19.22%,
+                                                    rgba(15, 16, 22, 0.5) 76.59%);
                                             backdrop-filter: blur(3px);
                                         }
                                     }
@@ -213,6 +211,7 @@
                             }
                         }
                     }
+
                     .container {
                         .right-content {
                             position: absolute;
@@ -231,19 +230,24 @@
             }
         }
     }
+
     @include responsive(700px) {
         .slide-principal {
             height: 622px;
+
             .swiper-wrapper {
                 .swiper-slide {
                     &.slide-01 {
                         background-position-x: -318px;
                     }
+
                     &.slide-02 {
                         background-position-x: -566px;
                     }
+
                     &.slide-03 {
                         background-position-x: -582px;
+
                         .container {
                             .left-content {
                                 h2 {
@@ -252,7 +256,9 @@
                             }
                         }
                     }
+
                     padding-top: 131px;
+
                     .container {
                         .left-content {
                             // max-width: 283px;
@@ -260,6 +266,7 @@
                             h2 {
                                 font-size: 40px;
                             }
+
                             p {
                                 max-width: 289px;
                                 font-weight: 400;
@@ -267,10 +274,12 @@
                                 line-height: 27px;
                                 letter-spacing: -0.005em;
                             }
+
                             a {
                                 padding: 9px 26px;
                             }
                         }
+
                         .right-content {
                             display: none;
                         }
@@ -278,6 +287,7 @@
                 }
             }
         }
+
         .slide-thumbnail {
             top: 530px;
         }
@@ -378,6 +388,13 @@
                 grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
                 // grid-template-columns: repeat(4, 1fr);
                 gap: 32px 48px;
+                justify-items: center;
+
+                li {
+                    display: flex;
+                    justify-content: center;
+                    width: 100%;
+                }
 
                 &.active {
                     display: grid;
@@ -398,21 +415,25 @@
             }
         }
     }
+
     @include responsive(1000px) {
         .container {
             .top {
                 gap: 134px;
+
                 .left-top {
                     span {
                         display: none;
                     }
                 }
+
                 .right-top {
                     .filtro {
                         margin: 0;
                     }
                 }
             }
+
             .tab-games-container {
                 .tab-pane-games {
                     justify-items: center;
@@ -421,8 +442,15 @@
         }
     }
 }
+
 @include responsive(720px) {
     .container {
+        .top {
+            .right-top {
+                flex-direction: column;
+            }
+        }
+
         .tab-games-container {
             .tab-pane-games {
                 justify-items: center;
