--- a/scss/_patterns.scss
+++ b/scss/_patterns.scss
@@ -38,21 +38,7 @@
   align-items: flex-start;
   gap: 24px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  &.all-games {
-    border: 1.6125px solid #212428;
-    border-radius: 4.3px;
-    align-items: center;
-    justify-content: center;
-    height: 366.55px;
-    span {
-      font-weight: 600;
-      font-size: 17.2px;
-      line-height: 26px;
-      img {
-        margin-right: 14px;
-      }
-    }
-  }
+
   .image {
     display: flex;
     justify-content: center;
@@ -88,6 +74,7 @@
   &:hover .image-card {
     transform: scale(1.1);
   }
+
   &:hover .logo-card {
     transform: scale(1.3);
   }
@@ -95,5 +82,30 @@
   &:hover .image-card {
     background: linear-gradient(182.12deg, #020203 4.2%, hsla(240, 20%, 1%, 0.389) 73.91%);
     opacity: 0.9;
+  }
+}
+
+.game-card-allGames {
+  max-width: 301px;
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+  border: 1.6125px solid #212428;
+  border-radius: 4.3px;
+  align-items: center;
+  justify-content: center;
+  max-height: 366.55px;
+
+  span {
+    font-weight: 600;
+    font-size: 17.2px;
+    line-height: 26px;
+
+    img {
+      margin-right: 14px;
+    }
   }
 }
