--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -147,9 +147,11 @@
                                             width: 50px;
                                             height: 50px;
                                             border-radius: 50%;
-                                            background: linear-gradient(136.72deg,
-                                                    rgba(7, 7, 10, 0.86) 19.22%,
-                                                    rgba(15, 16, 22, 0.5) 76.59%);
+                                            background: linear-gradient(
+                                                136.72deg,
+                                                rgba(7, 7, 10, 0.86) 19.22%,
+                                                rgba(15, 16, 22, 0.5) 76.59%
+                                            );
                                             backdrop-filter: blur(3px);
                                         }
                                     }
@@ -383,7 +385,7 @@
         .tab-games-container {
             .tab-pane-games {
                 display: none;
-                padding-top: 87px;
+                margin-top: 87px;
                 // display: grid;
                 grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
                 // grid-template-columns: repeat(4, 1fr);
@@ -419,18 +421,52 @@
     @include responsive(1000px) {
         .container {
             .top {
-                gap: 134px;
-
+                justify-content: space-between;
                 .left-top {
+                    h2 {
+                        max-width: 175px;
+                    }
                     span {
                         display: none;
                     }
                 }
 
                 .right-top {
+                    max-width: 396px;
                     .filtro {
                         margin: 0;
                     }
+                }
+            }
+
+            .tab-games-container {
+                .tab-pane-games {
+                    justify-items: center;
+
+                    .game-card {
+                        width: 280px;
+                        height: 460px;
+                        // height: 276.64px;
+                        // .image {
+                        //     height: 384px;
+                        // }
+                    }
+                    .game-card-allGames {
+                        height: 384px;
+                        max-height: 100%;
+                    }
+                }
+            }
+        }
+    }
+    @include responsive(720px) {
+        .container {
+            .top {
+                justify-content: space-around;
+                .right-top {
+                    flex-direction: column-reverse;
+                    gap: 30px;
+                    max-width: 150px;
                 }
             }
 
@@ -441,19 +477,38 @@
             }
         }
     }
-}
-
-@include responsive(720px) {
-    .container {
-        .top {
-            .right-top {
+    @include responsive(530px) {
+        .container {
+            .top {
+                align-items: flex-start;
+                position: relative;
                 flex-direction: column;
-            }
-        }
+                gap: 50px;
+                .left-top {
+                    h2 {
+                        font-size: 28px;
+                    }
+                }
+                .right-top {
+                    max-width: initial;
+                    width: auto;
+                    gap: 50px;
 
-        .tab-games-container {
-            .tab-pane-games {
-                justify-items: center;
+                    flex-direction: row;
+                    align-self: center;
+                    .filtro {
+                        li {
+                            img {
+                                height: 26px;
+                            }
+                        }
+                    }
+                    .btn-all-games {
+                        position: absolute;
+                        top: 0px;
+                        right: 0px;
+                    }
+                }
             }
         }
     }
@@ -523,7 +578,7 @@
 
         .right-area {
             position: absolute;
-            top: 1;
+            top: 1px;
             left: 416px;
             width: 1053.33px;
             height: 593.96px;
@@ -540,6 +595,45 @@
                 top: 399px;
                 left: 297px;
                 animation: float 6s ease-in-out infinite;
+            }
+        }
+    }
+    @include responsive(1200px) {
+        .container {
+            .right-area {
+                left: 280px;
+            }
+        }
+    }
+    @include responsive(820px) {
+        .container {
+            .right-area {
+                left: 210px;
+            }
+        }
+    }
+    @include responsive(768px) {
+        height: auto;
+        .container {
+            flex-direction: column;
+            align-items: center;
+            gap: 40px;
+            .right-area {
+                width: 490px;
+                height: 434.27px;
+                position: relative;
+                top: initial;
+                left: initial;
+                .image1 {
+                    position: relative;
+                    left: 63px;
+                    top: 0;
+                }
+                .image2 {
+                    position: absolute;
+                    top: 152px;
+                    left: 163px;
+                }
             }
         }
     }
