--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -37,7 +37,6 @@ header {
                 display: flex;
                 gap: 34px;
                 align-items: center;
-
                 li {
                     a {
                         font-weight: 500;
@@ -46,6 +45,18 @@ header {
 
                         & > img {
                             margin-left: 14px;
+                        }
+                    }
+                }
+                .js-games,
+                .js-sports {
+                    img {
+                        transition: 0.4s linear;
+                    }
+                    &.active {
+                        color: $primary-default;
+                        img {
+                            transform: rotate(180deg);
                         }
                     }
                 }
@@ -180,6 +191,9 @@ header {
         pointer-events: all;
         height: auto;
         transform: translateY(0px);
+    }
+    @include responsive(1000px) {
+        display: none;
     }
 }
 
